resources/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: exb
  labels:
    app: exb-back
spec:
  revisionHistoryLimit: 2
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: exb-back
  template:
    metadata:
      labels:
        app: exb-back
    spec:
      serviceAccountName: exb-sa
      containers:
      - name: exb-back
        image: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-back:d0c01892d384200ba648957ca579331499ff8a0a
        ports:
        - containerPort: 8090
        resources:
          requests:
            memory: "20Mi"
            cpu: 200m
          limits:
            memory: "40Mi"
            cpu: 400m
        # command: ["stress"]
        # args: ["--vm", "1", "--vm-bytes", "60M", "--vm-hang", "1"]
