resources/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: exb
  labels:
    app: exb-front
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: exb-front
  template:
    metadata:
      labels:
        app: exb-front
    spec:
      containers:
      - name: exb-front
        image: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-front:d0c01892d384200ba648957ca579331499ff8a0a
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "40Mi"
            cpu: 200m
          limits:
            memory: "80Mi"
            cpu: 600m
