resources/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exb-admin-svc
  namespace: exb
spec:
  type: ClusterIP
  selector:
    app: exb-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
