resources/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exb-back-sbc
  namespace: exb
spec:
  type: ClusterIP
  selector:
    app: exb-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
