resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: backend
spec:
  type: LoadBalancer
  selector:
    app: exb-back
  ports:
    - protocol: TCP
      port: 8090
      name: http
