resources/exb-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exb-ingress
  namespace: exb
  # labels:
  #   app.kubernetes.io/name: "exb-ingress2"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: exb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:336481557929:certificate/fbacec26-4539-40a8-9e5a-7042b3c183b3
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

    external-dns.alpha.kubernetes.io/hostname: exam.heoshicorp.com
    external-dns: public
    external-dns.alpha.kubernetes.io/set-identifier: recordID
    external-dns.alpha.kubernetes.io/aws-weight: '1'
spec:
  # ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: exb-back-svc
                port: 
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /api2
            backend:
              service:
                name: exb-admin-svc
                port: 
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: exb-front-svc
                port: 
                  number: 80
