resources/sub-argo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    # alb.ingress.kubernetes.io/scheme: internet-facing
    
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: alb-sub-04
    alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0609724dd9cda79f0
    # alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}, {"HTTPS":8443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "8443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:336481557929:certificate/74cb2bea-8540-48e8-be6d-2ec9ec7d56de
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    external-dns.alpha.kubernetes.io/hostname: exam3.viassh.com
    external-dns: public

spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - http:
        paths:
          - path: /*
            backend:
              serviceName: argocd-server
              servicePort: 443
