resources/sub-ingress.yaml
apiVersion: extensions/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exb-sub-ingress
  namespace: exb
  # labels:
  #   app.kubernetes.io/name: "exb-ingress2"
  annotations:
    # alb.ingress.kubernetes.io/scheme: internet-facing
    
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: alb-sub-04
    alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0609724dd9cda79f0
    # alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:336481557929:certificate/74cb2bea-8540-48e8-be6d-2ec9ec7d56de
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

    external-dns.alpha.kubernetes.io/hostname: exam3.viassh.com
    
    external-dns: public

spec:
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: exb-back-svc
              servicePort: 80
    - http:
        paths:
          - path: /*
            backend:
              serviceName: exb-front-svc
              servicePort: 80
